added tests and code for recording info provided messages in FunSuite and FixtureFunSuite tests so they get printed after.